# quantum-circuit-simulator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
demos/: deutschs_algorithm.py  teleportation.py
notebooks/: prototype.ipynb
quantum_simulator.egg-info/: PKG-INFO  SOURCES.txt
src/: gate.py  operators.py  utils.py
src/demos/: teleportation.py
src/quantum_simulator/: quantum_state.py
